# depio

./: .gitignore  README.md  bench_dag_solver.py  demo.py  demo_code_hash.py  demo_functional.py  demo_hook.py  demo_hydra.py  demo_optuna.py  demo_progress.py  demo_scroll.py  demo_slurm.py  demo_slurm_progress.py  pyproject.toml  requirements.txt
src/depio/: BuildMode.py  Executors.py  Pipeline.py  Task.py  TaskStatus.py  __init__.py  _input.py  _tui.py  code_hash.py  config.py  decorators.py  exceptions.py  file_helpers.py  hooks.py  optuna_integration.py  progress.py  stdio_helpers.py
src/depio/integrations/: __init__.py  hydra.py  optuna.py
tests/: test_Executors.py  test_Pipeline_add_task.py  test_Pipeline_queries.py  test_Pipeline_solve_order.py  test_Task___eq__.py  test_Task___eq__IgnoredForEq.py  test_Task__get_args_dict.py  test_Task__get_not_updated_products.py  test_Task_get_args_dict_nested.py  test_Task_init.py  test_Task_is_ready_for_execution.py  test_Task_misc.py  test_Task_run.py  test_Task_should_run.py  test_Task_slurm_state.py  test_Task_status_transitions.py  test_Task_statuscolor.py  test_code_hash.py  test_decorators.py  test_pipeline_visualize.py  test_progress_remote.py  test_slurm_local.py
