[project]
name = "depio"
version = "0.1.0"
authors = [
  { name="Maximilian Noppel", email="noppel@kit.edu" },
  { name="Luan Ademi", email="luan.ademi@student.kit.edu"}
]
description = "A simple task manager with slurm integration"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "tabulate",
    "pytest",
    "submitit",
    "coverage",
    "termcolor",
    "attrs",
    "rich (>=14.2.0,<15.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "graphviz (>=0.21,<0.22)"
]

[project.optional-dependencies]
optuna = ["optuna"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.urls]
Homepage = "https://github.com/noppelmax/depio"
Issues = "https://github.com/noppelmax/depio/issues"

[dependency-groups]
dev = [
    "optuna (>=4.7.0,<5.0.0)"
]
